--- a/pbd/pipelines/data_extraction/pyproject.toml
+++ b/pbd/pipelines/data_extraction/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "ipython==8.35.0",
     "kubernetes>=32.0.1",
     "minio>=7.2.15",
+    "pillow>=11.2.1",
     "s3fs>=0.4.2",
     "transformers>=4.51.3",
     "zenml>=0.80.2",
