--- a/.github/workflows/docker_build_push.yaml
+++ b/.github/workflows/docker_build_push.yaml
@@ -1,14 +1,16 @@
-name: Build and Push Docker Images
+name: Build and Push Changed Pipelines
+
 on:
+  push:
+    branches: [main]
+    paths:
+      - 'pbd/pipelines/**'
   workflow_dispatch:
     inputs:
       folder:
-        description: 'Folder to build (optional - overrides change detection)'
+        description: 'Specific folder to build (inside pbd/pipelines/)'
         required: false
         type: string
-  push:
-    branches:
-      - main
 
 permissions:
   contents: read
@@ -17,79 +19,73 @@ permissions:
   id-token: write
 
 jobs:
-  detect-changes:
+  detect-changed:
     runs-on: ubuntu-latest
     outputs:
-      changed_folders: ${{ steps.filter.outputs.folders }}
+      folders: ${{ steps.detect.outputs.changed }}
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Get Changed Folders
-        id: filter
+
+      - name: Detect changed folders
+        id: detect
         run: |
-          if [ -n "${{ inputs.folder }}" ]; then
-            CHANGED='["${{ inputs.folder }}"]'
-          elif [ $(git rev-list --count HEAD) -eq 1 ]; then
-            # Initial commit: build everything
-            CHANGED=$(find pbd/pipelines -maxdepth 1 -mindepth 1 -type d -exec basename {} \; | jq -R -s -c 'split("\n")[:-1]')
-          else
-            # Get all folders that were touched in this commit
-            FOLDERS=$(git diff --name-status HEAD^ HEAD | grep '^pbd/pipelines/' | cut -f2 | cut -d '/' -f3 | sort -u)
+          echo "Detected manually dispatched folder: '${{ github.event.inputs.folder }}'"
 
-            # Filter only existing ones
-            EXISTING=()
-            for folder in $FOLDERS; do
-              if [ -d "pbd/pipelines/$folder" ]; then
-                EXISTING+=("\"$folder\"")
-              fi
-            done
-
-            # Join the valid folder names into a JSON array
-            CHANGED=$(printf "[%s]" "$(IFS=,; echo "${EXISTING[*]}")")
+          if [ -n "${{ github.event.inputs.folder }}" ]; then
+            echo "changed=[\"${{ github.event.inputs.folder }}\"]" >> $GITHUB_OUTPUT
+            exit 0
           fi
 
-          echo "folders=$CHANGED" >> $GITHUB_OUTPUT
-          echo "Detected folders for build: $CHANGED"
+          # Fallback if no previous commit exists (e.g., force-push or shallow clone)
+          PREV_COMMIT=$(git rev-parse HEAD^ 2>/dev/null || echo HEAD~1)
 
+          # Get changed folders under pbd/pipelines
+          CHANGED=$(git diff --name-only $PREV_COMMIT HEAD | grep '^pbd/pipelines/' | cut -d '/' -f3 | sort -u)
 
-  build-and-push:
-    needs: detect-changes
-    if: ${{ needs.detect-changes.outputs.changed_folders != '[]' && needs.detect-changes.outputs.changed_folders != '' }}
+          # Filter for folders that actually still exist
+          VALID_CHANGED=()
+          for f in $CHANGED; do
+            if [ -d "pbd/pipelines/$f" ]; then
+              VALID_CHANGED+=("\"$f\"")
+            fi
+          done
+
+          if [ ${#VALID_CHANGED[@]} -eq 0 ]; then
+            echo "No valid folders to build. Exiting."
+            echo "changed=[]" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          CHANGED_JSON=$(printf "[%s]" "$(IFS=,; echo "${VALID_CHANGED[*]}")")
+          echo "changed=$CHANGED_JSON" >> $GITHUB_OUTPUT
+          echo "Detected folders: $CHANGED_JSON"
+
+  build:
+    needs: detect-changed
+    if: ${{ needs.detect-changed.outputs.folders != '[]' && needs.detect-changed.outputs.folders != '' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        folder: ${{ fromJson(needs.detect-changes.outputs.changed_folders) }}
+        folder: ${{ fromJson(needs.detect-changed.outputs.folders) }}
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Prepare Lowercase Repository Name
-        id: repo-details
-        run: |
-          LOWERCASE_REPO_NAME=$(echo "${{ github.event.repository.name }}" | tr '[:upper:]' '[:lower:]')
-          echo "repo_name=$LOWERCASE_REPO_NAME" >> $GITHUB_OUTPUT
+      - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Prepare Lowercase Repository Owner
-        id: repo-owner
-        run: |
-          echo "repo_owner=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
-
-      - name: Build and Push Docker Image
+      - name: Push ${{ matrix.folder }} Docker Image
         uses: docker/build-push-action@v6
         with:
           context: pbd/
           file: pbd/pipelines/${{ matrix.folder }}/Dockerfile
           push: true
-          tags: ghcr.io/${{ steps.repo-owner.outputs.repo_owner }}/pbd-${{ matrix.folder }}:latest
+          tags: ghcr.io/${{ github.repository_owner }}/pbd-${{ matrix.folder }}:latest
