--- a/pbd/pipelines/data_extraction/pyproject.toml
+++ b/pbd/pipelines/data_extraction/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.7.0",
+    "bitsandbytes>=0.46.0",
     "boto3>=1.37.33",
     "botocore>=1.37.33",
     "ipython==8.35.0",
