--- a/pbd/pipelines/data_extraction/requirements.txt
+++ b/pbd/pipelines/data_extraction/requirements.txt
@@ -7,6 +7,7 @@ argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 asttokens==3.0.0
 bcrypt==4.0.1
+bitsandbytes==0.46.0
 boto3==1.38.26
 botocore==1.38.26
 cachetools==5.5.2
