--- a/pbd/pipelines/ocr_engine/pyproject.toml
+++ b/pbd/pipelines/ocr_engine/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "bitsandbytes>=0.46.0",
     "boto3>=1.38.27",
+    "datasets>=3.6.0",
     "kubernetes>=32.0.1",
     "minio>=7.2.15",
     "omegaconf>=2.3.0",
