--- a/pbd/pipelines/ocr_engine/requirements.txt
+++ b/pbd/pipelines/ocr_engine/requirements.txt
@@ -28,6 +28,7 @@ colorama==0.4.6 ; sys_platform == 'win32'
 comm==0.2.2
 compressed-tensors==0.9.4
 cupy-cuda12x==13.4.1 ; sys_platform != 'darwin'
+datasets==3.6.0
 decorator==5.2.1
 deprecated==1.2.18
 depyf==0.18.0
@@ -46,8 +47,7 @@ fastapi-cli==0.0.7
 fastrlock==0.8.3 ; sys_platform != 'darwin'
 filelock==3.18.0
 frozenlist==1.6.0
-fsspec==2025.3.0 ; python_full_version >= '3.13'
-fsspec==2025.5.1 ; python_full_version < '3.13'
+fsspec==2025.3.0
 gguf==0.17.0
 gitdb==4.0.12
 gitpython==3.1.44
@@ -90,6 +90,8 @@ mpmath==1.3.0
 msgpack==1.1.0
 msgspec==0.19.0
 multidict==6.4.4
+multiprocess==0.70.15 ; python_full_version < '3.13'
+multiprocess==0.70.16 ; python_full_version >= '3.13'
 nest-asyncio==1.6.0
 networkx==3.5
 ninja==1.11.1.4
@@ -125,6 +127,7 @@ opentelemetry-semantic-conventions-ai==0.4.9
 outlines==0.1.11
 outlines-core==0.1.26
 packaging==25.0
+pandas==2.2.3
 parso==0.8.4
 partial-json-parser==0.2.1.1.post5
 passlib==1.7.4
@@ -139,6 +142,7 @@ psutil==7.0.0
 ptyprocess==0.7.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'
 pure-eval==0.2.3
 py-cpuinfo==9.0.0
+pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pycountry==24.6.1
@@ -153,6 +157,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-json-logger==3.3.0
 python-multipart==0.0.20
+pytz==2025.2
 pywin32==310 ; sys_platform == 'win32'
 pyyaml==6.0.2
 pyzmq==26.4.0
@@ -193,6 +198,7 @@ triton==3.3.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'
 typer==0.16.0
 typing-extensions==4.13.2
 typing-inspection==0.4.1
+tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.34.2
 uvloop==0.21.0 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'
@@ -205,6 +211,7 @@ widgetsnbextension==4.0.14
 wrapt==1.17.2
 xformers==0.0.30 ; platform_machine == 'x86_64' and sys_platform == 'linux'
 xgrammar==0.1.19 ; platform_machine == 'aarch64' or platform_machine == 'x86_64'
+xxhash==3.5.0
 yarl==1.20.0
 zenml==0.83.0
 zipp==3.22.0
