--- a/pbd/pipelines/ocr_engine/configs/config.yaml
+++ b/pbd/pipelines/ocr_engine/configs/config.yaml
@@ -2,11 +2,11 @@ name: ocr_pipeline
 enable_cache: False
 enable_step_logs: True
 parameters:
-  endpoint: "fsml.minio.info"
+  endpoint: "fsml-minio.info"
   bucket: "data-bucket"
-  object_key: "processed_data/dc_mechanics.zip"
+  object_key: "processed_data/pdfs/dc_mechanics.zip"
   local_path: "/tmp/images.zip"
   extract_to: "/tmp/images"
   model_path: "/models/Qwen2.5-VL-7B-Instruct-unsloth-bnb-4bit"
-  max_new_tokens: 4096
-
+  max_new_tokens: 10404
+  filename: "dc_mechanics"
