--- a/pbd/pipelines/ocr_engine/Dockerfile
+++ b/pbd/pipelines/ocr_engine/Dockerfile
@@ -6,9 +6,9 @@ WORKDIR /app
 # Copy only your source code
 COPY pbd/helper /app/pbd/helper
 COPY pbd/pipelines/ocr_engine /app/pbd/pipelines/ocr_engine
-COPY pbd/pipelines/ocr_engine/requirements.txt /tmp/full-requirements.txt
 
-RUN pip install --no-cache-dir -r /tmp/full-requirements.txt
+# Install from the copied location
+RUN pip install --no-cache-dir -r /app/pbd/pipelines/ocr_engine/requirements.txt
 
 
 # Set env variables
