--- a/infra/configs/config.yaml
+++ b/infra/configs/config.yaml
@@ -16,6 +16,6 @@ minikube_disk_size: "500GB"
 minikube_addons: "ingress,metrics-server"
 minikube_gpus: "all"
 infiscal_project_id: "ed73be73-bfc2-4950-a262-2cbd4a33d57f"
-minio_ingress_host: "fsml-minio.info"
+minio_ingress_host: "palebluedot-minio.io"
 minio_deployment_name: "minio-deployment"
 minio_service_name: "minio-service"
