--- a/pbd/pipelines/ocr_engine/pyproject.toml
+++ b/pbd/pipelines/ocr_engine/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "accelerate>=1.7.0",
     "bitsandbytes>=0.46.0",
     "boto3>=1.38.27",
     "datasets>=3.6.0",
