--- a/pbd/pipelines/data_processing/requirements.txt
+++ b/pbd/pipelines/data_processing/requirements.txt
@@ -73,6 +73,7 @@ s3fs==0.4.2
 s3transfer==0.11.5
 setuptools==78.1.0
 six==1.17.0
+slack-sdk==3.35.0
 smmap==5.0.2
 sqlalchemy==2.0.40
 sqlalchemy-utils==0.41.2
