--- a/pbd/pipelines/ocr_engine/pyproject.toml
+++ b/pbd/pipelines/ocr_engine/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "minio>=7.2.15",
     "pillow>=11.2.1",
     "s3fs>=0.4.2",
+    "slack-sdk>=3.35.0",
     "vllm==0.9.0.1",
     "zenml==0.83.0",
 ]
