--- a/pbd/pipelines/ocr_engine/requirements.txt
+++ b/pbd/pipelines/ocr_engine/requirements.txt
@@ -177,6 +177,7 @@ sentencepiece==0.2.0
 setuptools==79.0.1
 shellingham==1.5.4
 six==1.17.0
+slack-sdk==3.35.0
 smmap==5.0.2
 sniffio==1.3.1
 sqlalchemy==2.0.41
