--- a/.github/workflows/docker_build_push.yaml
+++ b/.github/workflows/docker_build_push.yaml
@@ -1,5 +1,4 @@
 name: Build and Push Docker Images
-
 on:
   workflow_dispatch:
     inputs:
@@ -12,13 +11,11 @@ on:
       - main
     paths:
       - "pbd/pipelines/**"
-
 permissions:
   contents: read
   packages: write
   attestations: write
   id-token: write
-
 jobs:
   detect-changes:
     runs-on: pbd-runner-scale-set # ✅ ARC runner
@@ -29,7 +26,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Needed for full git history
-
       - name: Get Changed Folders
         id: filter
         run: |
@@ -40,20 +36,16 @@ jobs:
           else
             # Get folders with changes in pbd/pipelines/*
             FOLDERS=$(git diff --name-only origin/main...HEAD | grep '^pbd/pipelines/' | cut -d '/' -f3 | sort -u)
-
             EXISTING=()
             for folder in $FOLDERS; do
               if [ -d "pbd/pipelines/$folder" ]; then
                 EXISTING+=("\"$folder\"")
               fi
             done
-
             CHANGED=$(printf "[%s]" "$(IFS=,; echo "${EXISTING[*]}")")
           fi
-
           echo "folders=$CHANGED" >> $GITHUB_OUTPUT
           echo "Detected folders for build: $CHANGED"
-
   build-and-push:
     needs: detect-changes
     if: ${{ needs.detect-changes.outputs.changed_folders != '[]' && needs.detect-changes.outputs.changed_folders != '' }}
@@ -64,28 +56,23 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
       - name: Prepare Lowercase Repository Name
         id: repo-details
         run: |
           LOWERCASE_REPO_NAME=$(echo "${{ github.event.repository.name }}" | tr '[:upper:]' '[:lower:]')
           echo "repo_name=$LOWERCASE_REPO_NAME" >> $GITHUB_OUTPUT
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Prepare Lowercase Repository Owner
         id: repo-owner
         run: |
           echo "repo_owner=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
-
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
@@ -93,3 +80,25 @@ jobs:
           file: pbd/pipelines/${{ matrix.folder }}/Dockerfile
           push: true
           tags: ghcr.io/${{ steps.repo-owner.outputs.repo_owner }}/pbd-${{ matrix.folder }}:latest
+
+  notify-slack:
+    needs: [detect-changes, build-and-push]
+    if: always() # This ensures the job runs regardless of success/failure of previous jobs
+    runs-on: pbd-runner-scale-set
+    steps:
+      - name: Send Slack Notification
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+          channel-id: 'C09115D7Z2T' # Replace with your actual channel ID
+          slack-message: |
+            🐳 *Docker Build Pipeline Complete*
+            
+            📁 *Repository:* ${{ github.repository }}
+            🌿 *Branch:* ${{ github.ref_name }}
+            📝 *Commit:* `${{ github.sha }}`
+            🏗️ *Folders Built:* ${{ needs.detect-changes.outputs.changed_folders }}
+            ✅ *Status:* ${{ needs.build-and-push.result }}
+            
+            🔗 <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|View Workflow Run>
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
