added metaflow components

--- a/infra/configs/config.yaml
+++ b/infra/configs/config.yaml
@@ -4,7 +4,7 @@ pvc_name: "mk-pvc"
 model_pv_name: "mk-model-pv"
 model_pvc_name: "mk-model-pvc"
 data_bucket: "data-bucket"
-zenml_bucket: "zenml-bucket"
+zenml_bucket: "metaflow"
 mk_storage_capacity: "200Gi"
 model_storage_capacity: "100Gi"
 storage_path: "/home/atharvaphatak/Desktop/minikube_path/minio"
@@ -16,6 +16,6 @@ minikube_disk_size: "500GB"
 minikube_addons: "ingress,metrics-server"
 minikube_gpus: "all"
 infiscal_project_id: "ed73be73-bfc2-4950-a262-2cbd4a33d57f"
-minio_ingress_host: "palebluedot-minio.io"
+minio_ingress_host: "minio-palebluedot.io"
 minio_deployment_name: "minio-deployment"
 minio_service_name: "minio-service"
