--- a/pbd/pipelines/ocr_engine/pyproject.toml
+++ b/pbd/pipelines/ocr_engine/pyproject.toml
@@ -10,12 +10,12 @@ dependencies = [
     "boto3>=1.38.27",
     "datasets>=3.6.0",
     "kubernetes>=32.0.1",
+    "metaflow>=2.15.18",
     "minio>=7.2.15",
     "pillow>=11.2.1",
     "s3fs>=0.4.2",
     "slack-sdk>=3.35.0",
     "vllm==0.9.0.1",
-    "zenml==0.83.0",
 ]
 
 [dependency-groups]
