--- a/pbd/pipelines/data_processing/pyproject.toml
+++ b/pbd/pipelines/data_processing/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "metaflow>=2.15.18",
     "minio>=7.2.15",
     "pdf2image>=1.17.0",
+    "pydantic>=2.11.7",
     "pymupdf>=1.25.5",
     "s3fs>=0.4.2",
     "slack-sdk>=3.35.0",
