--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,21 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "pre-commit>=4.2.0",
+ "pre-commit>=4.2.0",
+ "typer",
+ "rich",
+ "metaflow",
 ]
+
+[project.scripts]
+forge = "forge.__main__:app"
+
+[tool.uv]
+package = true
+
+[build-system]
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["forge*"]
