add cli to deploy infra

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 .vscode
+.secrets/
 # Pulumi stack files (contain sensitive data and environment-specific config)
 Pulumi.*.yaml
 
