--- a/infra/Pulumi.yaml
+++ b/infra/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: minikube-pulumi
+name: constellation
 runtime: python
-description: Pulumi project to deploy Minikube with PostgreSQL, MinIO, and Ingress.
+description: Pulumi project to deploy on prem k8s cluster for LLM training and inference.
