refactor infra add annotator

--- a/infra/configs/config.yaml
+++ b/infra/configs/config.yaml
@@ -9,6 +9,9 @@ mk_storage_capacity: "200Gi"
 model_storage_capacity: "100Gi"
 storage_path: "/home/atharvaphatak/Desktop/minikube_path/minio"
 model_storage_path: "/home/atharvaphatak/Desktop/models"
+argilla_mount_path: "/home/atharvaphatak/Desktop/minikube_path/labelling"
+redis_mount_path: "/home/atharvaphatak/Desktop/minikube_path/redis"
+redis_replica_mount_path: "/home/atharvaphatak/Desktop/minikube_path/redis_replica"
 sql_host_path: "/home/atharva/Desktop/minikube_path/mysql"
 minikube_cpus: 14
 minikube_memory: "45g"
