--- a/pbd/pipelines/ocr_engine/requirements.txt
+++ b/pbd/pipelines/ocr_engine/requirements.txt
@@ -31,7 +31,9 @@ cloudpickle==2.2.1
 colorama==0.4.6 ; sys_platform == 'win32'
 comm==0.2.2
 compressed-tensors==0.9.4
+contourpy==1.3.2
 cupy-cuda12x==13.4.1 ; sys_platform != 'darwin'
+cycler==0.12.1
 datasets==3.6.0
 debugpy==1.8.14
 decorator==5.2.1
@@ -52,6 +54,7 @@ fastapi-cli==0.0.7
 fastjsonschema==2.21.1
 fastrlock==0.8.3 ; sys_platform != 'darwin'
 filelock==3.18.0
+fonttools==4.58.5
 fqdn==1.5.1
 frozenlist==1.6.0
 fsspec==2025.3.0
@@ -89,6 +92,7 @@ jupyter-server-terminals==0.5.3
 jupyterlab==4.4.3
 jupyterlab-pygments==0.3.0
 jupyterlab-server==2.27.3
+kiwisolver==1.4.8
 kubernetes==32.0.1
 lark==1.2.2
 llguidance==0.7.26 ; platform_machine == 'aarch64' or platform_machine == 'arm64' or platform_machine == 'x86_64'
@@ -96,6 +100,7 @@ llvmlite==0.44.0
 lm-format-enforcer==0.10.11
 markdown-it-py==3.0.0
 markupsafe==3.0.2
+matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 metaflow==2.15.18
@@ -172,6 +177,7 @@ pycryptodome==3.23.0
 pydantic==2.11.1
 pydantic-core==2.33.0
 pygments==2.19.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-json-logger==3.3.0
