--- a/.github/workflows/ci_cd_metaflow_pipelines.yaml
+++ b/.github/workflows/ci_cd_metaflow_pipelines.yaml
@@ -16,16 +16,39 @@ permissions:
   packages: write
   attestations: write
   id-token: write
+
 jobs:
+  check-runner:
+    runs-on: ubuntu-latest
+    outputs:
+      runner_available: ${{ steps.check.outputs.available }}
+    steps:
+      - name: Check ARC Runner Status
+        id: check
+        run: |
+          # Check if pbd-runner-scale-set is available
+          if curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+               "https://api.github.com/repos/${{ github.repository }}/actions/runners" | \
+               jq -r '.runners[] | select(.name | contains("pbd-runner-scale-set")) | .status' | \
+               grep -q "online"; then
+            echo "available=true" >> $GITHUB_OUTPUT
+            echo "✅ ARC runner is available"
+          else
+            echo "available=false" >> $GITHUB_OUTPUT
+            echo "❌ ARC runner is not available - skipping pipeline"
+          fi
+
   detect-changes:
-    runs-on: pbd-runner-scale-set # ✅ ARC runner
+    needs: check-runner
+    if: ${{ needs.check-runner.outputs.runner_available == 'true' }}
+    runs-on: pbd-runner-scale-set
     outputs:
       changed_folders: ${{ steps.filter.outputs.folders }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Needed for full git history
+          fetch-depth: 0
       - name: Get Changed Folders
         id: filter
         run: |
@@ -34,7 +57,6 @@ jobs:
           elif [ $(git rev-list --count HEAD) -eq 1 ]; then
             CHANGED=$(find pbd/pipelines -maxdepth 1 -mindepth 1 -type d -exec basename {} \; | jq -R -s -c 'split("\n")[:-1]')
           else
-            # Get folders with changes in pbd/pipelines/*
             FOLDERS=$(git diff --name-only origin/main...HEAD | grep '^pbd/pipelines/' | cut -d '/' -f3 | sort -u)
             EXISTING=()
             for folder in $FOLDERS; do
@@ -45,22 +67,23 @@ jobs:
             CHANGED=$(printf "[%s]" "$(IFS=,; echo "${EXISTING[*]}")")
           fi
           echo "folders=$CHANGED" >> $GITHUB_OUTPUT
-          echo "Detected folders for build: $CHANGED"
+          echo "Detected folders: $CHANGED"
+
   build-and-push:
-    needs: detect-changes
-    if: ${{ needs.detect-changes.outputs.changed_folders != '[]' && needs.detect-changes.outputs.changed_folders != '' }}
-    runs-on: pbd-runner-scale-set # ✅ ARC runner
+    needs: [check-runner, detect-changes]
+    if: ${{ needs.check-runner.outputs.runner_available == 'true' && needs.detect-changes.outputs.changed_folders != '[]' && needs.detect-changes.outputs.changed_folders != '' }}
+    runs-on: pbd-runner-scale-set
     strategy:
       matrix:
         folder: ${{ fromJson(needs.detect-changes.outputs.changed_folders) }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-      - name: Prepare Lowercase Repository Name
+      - name: Prepare Repository Details
         id: repo-details
         run: |
-          LOWERCASE_REPO_NAME=$(echo "${{ github.event.repository.name }}" | tr '[:upper:]' '[:lower:]')
-          echo "repo_name=$LOWERCASE_REPO_NAME" >> $GITHUB_OUTPUT
+          echo "repo_name=$(echo '${{ github.event.repository.name }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+          echo "repo_owner=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to GitHub Container Registry
@@ -69,36 +92,33 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Prepare Lowercase Repository Owner
-        id: repo-owner
-        run: |
-          echo "repo_owner=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
           context: pbd/
           file: pbd/pipelines/${{ matrix.folder }}/Dockerfile
           push: true
-          tags: ghcr.io/${{ steps.repo-owner.outputs.repo_owner }}/pbd-${{ matrix.folder }}:latest
+          tags: ghcr.io/${{ steps.repo-details.outputs.repo_owner }}/pbd-${{ matrix.folder }}:latest
+      #- name: Deploy with Forge CLI
+      #  run: |
+      #    echo "🚀 Deploying ${{ matrix.folder }} pipeline with Forge CLI"
+      #    if [ -x "./forge" ]; then
+      #      ./forge deploy --pipeline ${{ matrix.folder }} --image ghcr.io/${{ steps.repo-details.outputs.repo_owner }}/pbd-${{ matrix.folder }}:latest
+      #    else
+      #      echo "❌ Forge CLI not found or not executable"
+      #      exit 1
+      #    fi
 
   notify-slack:
-    needs: [detect-changes, build-and-push]
-    if: always() # This ensures the job runs regardless of success/failure of previous jobs
+    needs: [check-runner, detect-changes, build-and-push]
+    if: always() && needs.check-runner.outputs.runner_available == 'true'
     runs-on: pbd-runner-scale-set
     steps:
       - name: Send Slack Notification
         uses: slackapi/slack-github-action@v1.26.0
         with:
-          channel-id: 'C09115D7Z2T' # Replace with your actual channel ID
+          channel-id: 'C09115D7Z2T'
           slack-message: |
-            🐳 *Docker Build Pipeline Complete*
-
-            📁 *Repository:* ${{ github.repository }}
-            🌿 *Branch:* ${{ github.ref_name }}
-            📝 *Commit:* `${{ github.sha }}`
-            🏗️ *Folders Built:* ${{ needs.detect-changes.outputs.changed_folders }}
-            ✅ *Status:* ${{ needs.build-and-push.result }}
-
-            🔗 <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|View Workflow Run>
+            🐳 Pipeline: ${{ needs.detect-changes.outputs.changed_folders }} | Status: ${{ needs.build-and-push.result }} | <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|View>
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
