--- a/pbd/pipelines/ocr_engine/pyproject.toml
+++ b/pbd/pipelines/ocr_engine/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pillow>=11.2.1",
     "s3fs>=0.4.2",
     "slack-sdk>=3.35.0",
+    "transformers>=4.52.4",
     "vllm==0.9.0.1",
 ]
 
