--- a/pbd/pipelines/ocr_engine/configs/config.json
+++ b/pbd/pipelines/ocr_engine/configs/config.json
@@ -1,6 +1,6 @@
 {
-  "image_path": "extracted_data",
   "minio_endpoint" : "minio-palebluedot.io",
+  "image_path": "extracted_data",
   "bucket" : "data-bucket",
   "local_path" : "/tmp/images.zip",
   "extract_to" : "/tmp/images",
@@ -8,14 +8,5 @@
   "ocr_params" : {
     "max_tokens" : 80000
   },
-  "ocr_model_batch_size" : 20,
-  "post_processing_model_path" : "/models/Qwen3-4B-unsloth-bnb-4bit",
-  "post_processing_params" : {
-    "temperature" : 0.7,
-    "top_p" : 0.80,
-    "top_k" : 20,
-    "max_tokens" : 38912
-  },
-  "post_processing_batch_size" : 20,
-  "run_test" : "true"
+  "ocr_model_batch_size" : 20
 }
