add post processing pipeline

--- a/pbd/pipelines/ocr_engine/configs/config.json
+++ b/pbd/pipelines/ocr_engine/configs/config.json
@@ -8,5 +8,6 @@
   "ocr_params" : {
     "max_tokens" : 80000
   },
-  "ocr_model_batch_size" : 20
+  "ocr_model_batch_size" : 20,
+  "run_test" : true
 }
