--- a/pbd/pipelines/ocr_post_process/configs/config.json
+++ b/pbd/pipelines/ocr_post_process/configs/config.json
@@ -1,9 +1,10 @@
 {
   "minio_endpoint" : "minio-palebluedot.io",
-  "post_processing_model_path" : "/models/DeepSeek-R1-0528-Qwen3-8B-unsloth-bnb-4bit",
+  "post_processing_model_path" : "/models/Qwen3-4B-unsloth-bnb-4bit",
   "post_processing_params" : {
-    "temperature" : 0.95,
-    "top_p" : 0.60,
+    "temperature" : 0.7,
+    "top_p" : 0.8,
+    "top_k": 20,
     "max_tokens" : 38912
   },
   "post_processing_batch_size" : 10,
