--- a/pbd/pipelines/ocr_post_process/pyproject.toml
+++ b/pbd/pipelines/ocr_post_process/pyproject.toml
@@ -18,4 +18,5 @@ dependencies = [
     "s3fs>=0.4.2",
     "slack-sdk>=3.35.0",
     "transformers>=4.52.4",
-    "vllm==0.9.0.1",]
+    "vllm==0.9.2.0",
+]
