--- a/pbd/pipelines/ocr_post_process/requirements.txt
+++ b/pbd/pipelines/ocr_post_process/requirements.txt
@@ -16,22 +16,21 @@ attrs==25.3.0
 bitsandbytes==0.46.1
 blake3==1.0.5
 boto3==1.38.27 ; python_full_version >= '3.13'
-boto3==1.39.2 ; python_full_version < '3.13'
+boto3==1.39.4 ; python_full_version < '3.13'
 botocore==1.38.27 ; python_full_version >= '3.13'
-botocore==1.39.2 ; python_full_version < '3.13'
+botocore==1.39.4 ; python_full_version < '3.13'
 cachetools==6.1.0
-certifi==2025.6.15
+certifi==2025.7.9
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 cloudpickle==3.1.1
 colorama==0.4.6 ; sys_platform == 'win32'
-compressed-tensors==0.9.4
+compressed-tensors==0.10.2
 contourpy==1.3.2
 cupy-cuda12x==13.4.1 ; sys_platform != 'darwin'
 cycler==0.12.1
 datasets==4.0.0
-deprecated==1.2.18
 depyf==0.18.0
 dill==0.3.8
 diskcache==5.6.3
@@ -50,8 +49,6 @@ frozenlist==1.7.0
 fsspec==2025.3.0
 gguf==0.17.1
 google-auth==1.6.3
-googleapis-common-protos==1.70.0
-grpcio==1.66.2
 h11==0.16.0
 hf-xet==1.1.5
 httpcore==1.0.9
@@ -59,7 +56,6 @@ httptools==0.6.4
 httpx==0.28.1
 huggingface-hub==0.33.2
 idna==3.10
-importlib-metadata==8.4.0
 interegular==0.3.3
 jinja2==3.1.6
 jiter==0.10.0
@@ -77,9 +73,11 @@ markdown-it-py==3.0.0
 markupsafe==3.0.2
 matplotlib==3.10.3
 mdurl==0.1.2
-metaflow==2.15.18
+metaflow==2.15.19
 minio==7.2.15
 mistral-common==1.7.0
+mlx==0.26.3 ; platform_machine == 'arm64' and sys_platform == 'darwin'
+mlx-lm==0.26.0 ; platform_machine == 'arm64' and sys_platform == 'darwin'
 mpmath==1.3.0
 msgpack==1.1.1
 msgspec==0.19.0
@@ -105,17 +103,8 @@ nvidia-nccl-cu12==2.26.2 ; platform_machine == 'x86_64' and sys_platform == 'lin
 nvidia-nvjitlink-cu12==12.6.85 ; platform_machine == 'x86_64' and sys_platform == 'linux'
 nvidia-nvtx-cu12==12.6.77 ; platform_machine == 'x86_64' and sys_platform == 'linux'
 oauthlib==3.3.1
-openai==1.93.3
+openai==1.90.0
 opencv-python-headless==4.12.0.88
-opentelemetry-api==1.27.0
-opentelemetry-exporter-otlp==1.27.0
-opentelemetry-exporter-otlp-proto-common==1.27.0
-opentelemetry-exporter-otlp-proto-grpc==1.27.0
-opentelemetry-exporter-otlp-proto-http==1.27.0
-opentelemetry-proto==1.27.0
-opentelemetry-sdk==1.27.0
-opentelemetry-semantic-conventions==0.48b0
-opentelemetry-semantic-conventions-ai==0.4.10
 outlines==0.1.11
 outlines-core==0.1.26
 packaging==25.0
@@ -125,12 +114,13 @@ pillow==11.3.0
 prometheus-client==0.22.1
 prometheus-fastapi-instrumentator==7.1.0
 propcache==0.3.2
-protobuf==4.25.8
+protobuf==5.29.5
 psutil==7.0.0
 py-cpuinfo==9.0.0
 pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
+pybase64==1.4.1
 pycountry==24.6.1
 pycparser==2.22
 pycryptodome==3.23.0
@@ -178,19 +168,18 @@ tqdm==4.67.1
 transformers==4.53.1
 triton==3.3.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'
 typer==0.16.0
-typing-extensions==4.14.0
+typing-extensions==4.14.1
 typing-inspection==0.4.1
 tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
 uvloop==0.21.0 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'
-vllm==0.9.0.1
+vllm==0.9.2
 watchfiles==1.1.0
 websocket-client==1.8.0
 websockets==15.0.1
-wrapt==1.17.2
+wrapt==1.17.2 ; python_full_version >= '3.13'
 xformers==0.0.30 ; platform_machine == 'x86_64' and sys_platform == 'linux'
-xgrammar==0.1.19 ; platform_machine == 'aarch64' or platform_machine == 'x86_64'
+xgrammar==0.1.19 ; platform_machine == 'aarch64' or platform_machine == 'arm64' or platform_machine == 'x86_64'
 xxhash==3.5.0
 yarl==1.20.1
-zipp==3.23.0
