--- a/pbd/pipelines/data_annotator/pyproject.toml
+++ b/pbd/pipelines/data_annotator/pyproject.toml
@@ -8,4 +8,11 @@ dependencies = [
     "argilla>=2.8.0",
     "kubernetes>=33.1.0",
     "metaflow==2.16.0",
+    "boto3>=1.38.27",
+    "datasets>=3.6.0",
+    "kubernetes>=32.0.1",
+    "metaflow>=2.15.18",
+    "minio>=7.2.15",
+    "s3fs>=0.4.2",
+    "slack-sdk>=3.35.0",
 ]
