--- a/pbd/pipelines/data_annotator/requirements.txt
+++ b/pbd/pipelines/data_annotator/requirements.txt
@@ -6,11 +6,14 @@ aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.9.0
 argilla==2.8.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==21.2.0
 attrs==25.3.0
 boto3==1.39.4
 botocore==1.39.4
 cachetools==5.5.2
 certifi==2025.7.14
+cffi==1.17.1
 charset-normalizer==3.4.2
 colorama==0.4.6 ; sys_platform == 'win32'
 datasets==4.0.0
@@ -32,6 +35,7 @@ kubernetes==33.1.0
 markdown-it-py==3.0.0
 mdurl==0.1.2
 metaflow==2.16.0
+minio==7.2.15
 multidict==6.6.3
 multiprocess==0.70.16
 numpy==2.3.1
@@ -43,6 +47,8 @@ propcache==0.3.2
 pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
+pycparser==2.22
+pycryptodome==3.23.0
 pydantic==2.11.7
 pydantic-core==2.33.2
 pygments==2.19.2
@@ -53,8 +59,10 @@ requests==2.32.4
 requests-oauthlib==2.0.0
 rich==14.0.0
 rsa==4.9.1
+s3fs==0.4.2
 s3transfer==0.13.0
 six==1.17.0
+slack-sdk==3.36.0
 sniffio==1.3.1
 standardwebhooks==1.0.0
 tqdm==4.67.1
