--- a/pbd/pipelines/ocr_engine/configs/config.json
+++ b/pbd/pipelines/ocr_engine/configs/config.json
@@ -4,7 +4,7 @@
   "bucket" : "data-bucket",
   "local_path" : "/tmp/images.zip",
   "extract_to" : "/tmp/images",
-  "ocr_model_path" : "/models/Nanonets-OCR-s",
+  "ocr_model_path" : "/models/Qwen2.5-VL-7B-Instruct-unsloth-bnb-4bit",
   "ocr_params" : {
     "max_tokens" : 80000
   },
