--- a/pbd/pipelines/ocr_post_process/pyproject.toml
+++ b/pbd/pipelines/ocr_post_process/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "json5>=0.12.0",
     "kubernetes>=32.0.1",
     "matplotlib>=3.10.3",
-    "metaflow>=2.15.18",
+    "metaflow==2.16",
     "minio>=7.2.15",
     "pillow>=11.2.1",
     "s3fs>=0.4.2",
