--- a/pbd/webhooks/metaflow_webhook/pyproject.toml
+++ b/pbd/webhooks/metaflow_webhook/pyproject.toml
@@ -7,5 +7,5 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.13",
     "fastapi-cli>=0.0.7",
-    "metaflow>=2.15.18",
+    "metaflow==2.16.3",
 ]
