--- a/pbd/pipelines/ocr_post_process/pyproject.toml
+++ b/pbd/pipelines/ocr_post_process/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.7.0",
+    "beautifulsoup4>=4.13.4",
     "bitsandbytes>=0.46.0",
     "boto3>=1.38.27",
     "datasets>=3.6.0",
