--- a/pbd/pipelines/ocr_post_process/requirements.txt
+++ b/pbd/pipelines/ocr_post_process/requirements.txt
@@ -13,6 +13,7 @@ argon2-cffi==25.1.0
 argon2-cffi-bindings==21.2.0
 astor==0.8.1
 attrs==25.3.0
+beautifulsoup4==4.13.4
 bitsandbytes==0.46.1
 blake3==1.0.5
 boto3==1.38.27 ; python_full_version >= '3.13'
@@ -157,6 +158,7 @@ shellingham==1.5.4
 six==1.17.0
 slack-sdk==3.36.0
 sniffio==1.3.1
+soupsieve==2.7
 starlette==0.46.2
 sympy==1.14.0
 tiktoken==0.9.0
