--- a/pbd/pipelines/data_processing/pyproject.toml
+++ b/pbd/pipelines/data_processing/pyproject.toml
@@ -7,12 +7,14 @@ requires-python = ">=3.12"
 dependencies = [
     "boto3>=1.37.18",
     "botocore>=1.37.18",
+    "ftfy>=6.3.1",
     "kubernetes>=33.1.0",
     "metaflow==2.15.21",
     "minio>=7.2.15",
     "pdf2image>=1.17.0",
     "pydantic>=2.11.7",
     "pymupdf>=1.25.5",
+    "pypdf==5.8.0",
     "s3fs>=0.4.2",
     "slack-sdk>=3.35.0",
 ]
