--- a/pbd/pipelines/data_processing/requirements.txt
+++ b/pbd/pipelines/data_processing/requirements.txt
@@ -11,6 +11,7 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 durationpy==0.10
 fsspec==2025.3.2
+ftfy==6.3.1
 google-auth==2.40.3
 idna==3.10
 jmespath==1.0.1
@@ -27,6 +28,7 @@ pycryptodome==3.22.0
 pydantic==2.11.7
 pydantic-core==2.33.2
 pymupdf==1.25.5
+pypdf==5.8.0
 python-dateutil==2.9.0.post0
 pyyaml==6.0.2
 requests==2.32.4
@@ -39,4 +41,5 @@ slack-sdk==3.35.0
 typing-extensions==4.13.2
 typing-inspection==0.4.1
 urllib3==2.4.0
+wcwidth==0.2.13
 websocket-client==1.8.0
