--- a/pbd/pipelines/data_processing/pyproject.toml
+++ b/pbd/pipelines/data_processing/pyproject.toml
@@ -7,10 +7,12 @@ requires-python = ">=3.12"
 dependencies = [
     "boto3>=1.37.18",
     "botocore>=1.37.18",
+    "datauri>=1.0.0",
     "ftfy>=6.3.1",
     "kubernetes>=33.1.0",
     "metaflow==2.15.21",
     "minio>=7.2.15",
+    "mistralai>=1.9.2",
     "pdf2image>=1.17.0",
     "pydantic>=2.11.7",
     "pymupdf>=1.25.5",
