--- a/infra/configs/config.yaml
+++ b/infra/configs/config.yaml
@@ -3,12 +3,16 @@ pv_name: "mk-pv"
 pvc_name: "mk-pvc"
 model_pv_name: "mk-model-pv"
 model_pvc_name: "mk-model-pvc"
+ocr_model_pv_name: "mk-ocr-pv"
+ocr_model_pvc_name: "mk-ocr-pvc"
 data_bucket: "data-bucket"
 zenml_bucket: "metaflow"
 mk_storage_capacity: "200Gi"
 model_storage_capacity: "100Gi"
+ocr_model_storage_capcity: "4Gi"
 storage_path: "/home/atharvaphatak/Desktop/minikube_path/minio"
 model_storage_path: "/home/atharvaphatak/Desktop/models"
+ocr_model_storage_path : "/home/atharvaphatak/Desktop/minikube_path/ocr_models"
 argilla_mount_path: "/home/atharvaphatak/Desktop/minikube_path/labelling"
 redis_mount_path: "/home/atharvaphatak/Desktop/minikube_path/redis"
 redis_replica_mount_path: "/home/atharvaphatak/Desktop/minikube_path/redis_replica"
