remove vllm ocr_engine add marker engine

--- a/pbd/pipelines/ocr/Dockerfile
+++ b/pbd/pipelines/ocr/Dockerfile
@@ -5,10 +5,10 @@ WORKDIR /app
 
 # Copy only your source code
 COPY helper /app/pbd/helper
-COPY pipelines/ocr_engine /app/pbd/pipelines/ocr_engine
+COPY pipelines/ocr /app/pbd/pipelines/ocr
 
 # Install from the copied location
-RUN pip install --no-cache-dir -r /app/pbd/pipelines/ocr_engine/requirements.txt
+RUN pip install --no-cache-dir -r /app/pbd/pipelines/ocr/requirements.txt
 
 
 # Set env variables
