--- a/pbd/pipelines/ocr/pyproject.toml
+++ b/pbd/pipelines/ocr/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "data-processing"
+name = "ocr"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -10,6 +10,7 @@ dependencies = [
     "datauri>=1.0.0",
     "ftfy>=6.3.1",
     "kubernetes>=33.1.0",
+    "marker-pdf>=1.8.2",
     "metaflow==2.15.21",
     "minio>=7.2.15",
     "mistralai>=1.9.2",
